Persons and publications api with docs
